tests/snapshots/run_wpt_conformance__coreml_expand_float32_3D_tensor_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 3D tensor to 5D",
    "coreml",
    "PASS",
)
