tests/snapshots/run_wpt_conformance__coreml_floor_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "floor.https.any.js",
    "floor float16 4D tensor",
    "coreml",
    "PASS",
)
